<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">DroidGiro</string>
	<string name="about">Om DroidGiro</string>
	<string name="about_short">DroidGiro gör det möjligt att skanna dina
		pappersfakturor med telefonen och få ditt betalformulär på din bank
		automatiskt ifyllt. Du behöver även installera ett tillägg till din
		webbläsare.</string>
	<string name="about_version">Version</string>
	<string name="about_copyright">Copyright (c) 2011 DroidGiro.se</string>
	<string name="about_license">Apache License, Version 2.0</string>
	<string name="about_readmore">Läs mer om DroidGiro på:</string>
	<string name="about_url">http://droidgiro.se</string>
	<string name="reference_field">Referensnummer:</string>
	<string name="amount_field">Belopp:</string>
	<string name="account_field">Gironummer:</string>
	<string name="invoice_sent">Faktura skickas</string>
	<string name="debug_field">Debug:</string>
	<string name="debug_name">Debug</string>
	<string name="feedback">Feedback</string>
	<string name="document_type_field">Dokumenttyp:</string>
	<string name="show_debug_image">Visa debugbild</string>
	<string name="preferences_name">Inställningar</string>
	<string name="play_beep">Pip vid träff</string>
	<string name="vibrate">Vibrera vid träff</string>
	<string name="send_erase">Skicka</string>
	<string name="scan_state_pause">Pausa</string>
	<string name="scan_state_scan">Skanna</string>
	<string name="get_pin">Hämta din PIN-kod från Chrome-tillägget</string>
	<string name="pair_help">För hjälp, besök http://droidgiro.se. Där kan du
		också se vilka banker som stöds och hur du kan hjälpa till med stöd för
		nya banker.</string>
	<string name="pairing_msg">Ansluter till webbläsaren</string>
	<string name="pairing_failed">PIN-koden är inte giltig</string>
</resources>
