<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:padding="10dip" android:orientation="vertical"
	android:background="#ffffff">
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/app_name"
		android:gravity="center" android:textSize="28sp" android:textColor="#000000" />
	<ImageView android:id="@+id/about_logo" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:src="@drawable/icon"
		android:layout_gravity="center_horizontal" android:layout_marginTop="4dp"
		android:layout_marginBottom="15dp" android:clickable="true"
		android:onClick="donate"></ImageView>

	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/about_short"
		android:gravity="center" android:paddingBottom="10dip"
		android:textColor="#000000" />
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="Version X.Y.Z"
		android:gravity="center" android:textColor="#000000"
		android:paddingBottom="20dip" android:id="@+id/about_version" />
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/about_copyright"
		android:gravity="center" android:textColor="#000000" />
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/about_license"
		android:gravity="center" android:textColor="#000000"
		android:paddingBottom="20dip" />
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/about_readmore"
		android:gravity="center" android:textColor="#000000" android:textSize="12sp" />
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:gravity="center"
		android:text="@string/about_url" android:textColor="#000000"
		android:textSize="12sp" android:id="@+id/about_link"
		android:paddingBottom="25dip" />
</LinearLayout>

